--- a/package.json
+++ b/package.json
@@ -1,20 +1,59 @@
 {
-  "name": "palm-proxy",
-  "version": "0.0.0",
-  "devDependencies": {
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "typescript": "^5.3.3"
-  },
+  "name": "vercel-gemini-proxy",
+  "version": "1.0.0",
   "private": true,
+  "description": "Gemini API proxy on Vercel Edge.",
   "scripts": {
+    "commit": "git-cz",
+    "postinstall": "if [ -f ./scripts/postinstall.mjs ]; then node --experimental-modules ./scripts/postinstall.mjs; else exit 0; fi",
+    "preinstall": "if [ -f ./scripts/preinstall.mjs ]; then node --experimental-modules ./scripts/preinstall.mjs; else exit 0; fi",
+    "clear": "rimraf --glob ./libs",
+    "format": "prettier --config .prettierrc.js --write \"**/*.{js,jsx,ts,tsx,d.ts,vue,md,json,yml,yaml}\"",
+    "lint": "npm run lint:ts",
+    "lint:ts": "eslint --config .eslintrc.js --ext .ts,.tsx --fix .",
     "next": "next",
     "build": "next build",
-    "dev": "PORT=4000 next dev"
+    "dev": "PORT=4000 next dev",
+    "test": "jest -c ./jest.config.ts --coverage --reporters=default --reporters=jest-junit",
+    "test:watch": "jest --watch",
+    "ok": "npm run format && npm run lint && npm run build && npm run test"
   },
   "dependencies": {
-    "next": "canary",
-    "react": "latest",
-    "react-dom": "latest"
+    "next": "canary"
+  },
+  "devDependencies": {
+    "rimraf": "^5.0.5",
+    "@commitlint/cli": "^17.4.0",
+    "@commitlint/config-conventional": "^17.4.0",
+    "commitizen": "^4.2.4",
+    "commitlint-plugin-i18n": "^0.0.1-alpha.3",
+    "cz-customizable": "^7.0.0",
+    "cz-customizable-i18n-config": "^0.0.1-alpha.2",
+    "pretty-error": "^4.0.0",
+    "chalk": "^4.1.2",
+    "husky": "^8.0.3",
+    "@types/chalk": "^2.2.0",
+    "@jest/types": "^29.6.3",
+    "@types/jest": "^29.5.11",
+    "@types/node": "latest",
+    "@types/react": "18.2.48",
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
+    "jest-runner-tsd": "^6.0.0",
+    "prettier": "^3.1.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "ts-patch": "^3.1.1",
+    "lint-staged": "^15.2.0",
+    "typescript-transform-paths": "^3.4.6",
+    "spinnies": "^0.5.1",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1"
   }
 }
