--- a/package.json
+++ b/package.json
@@ -5,56 +5,60 @@
   "description": "Gemini API proxy on Vercel Edge.",
   "scripts": {
     "commit": "git-cz",
-    "ci:coverage": "npm run test",
+    "ci:coverage": "pnpm test",
     "postinstall": "node --experimental-modules ./scripts/postinstall.mjs",
     "preinstall": "node --experimental-modules ./scripts/preinstall.mjs",
     "clear": "rimraf --glob ./libs",
     "format": "prettier --config .prettierrc.js --write \"**/*.{js,jsx,ts,tsx,d.ts,vue,md,json,yml,yaml}\"",
-    "lint": "npm run lint:ts",
-    "lint:ts": "eslint --config .eslintrc.js --ext .ts,.tsx --fix .",
+    "lint": "pnpm lint:ts",
+    "lint:ts": "eslint -c eslint.config.mjs --fix .",
     "next": "next",
     "build": "next build",
     "dev": "PORT=4000 next dev",
     "test": "jest -c ./jest.config.ts --coverage --reporters=default --reporters=jest-junit",
     "test:watch": "jest --watch",
-    "ok": "npm run format && npm run lint && npm run build && npm run test"
+    "ok": "pnpm format && pnpm lint && pnpm build && pnpm test"
   },
   "dependencies": {
-    "next": "canary"
+    "next": "canary",
+    "react": "canary",
+    "react-dom": "canary"
   },
   "devDependencies": {
-    "rimraf": "^5.0.5",
-    "@commitlint/cli": "^17.4.0",
-    "@commitlint/config-conventional": "^17.4.0",
+    "json5": "^2.2.3",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@jest/types": "^29.6.3",
+    "@types/chalk": "^2.2.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.11",
+    "@types/react": "18.3.3",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
+    "chalk": "^5.3.0",
     "commitizen": "^4.2.4",
     "commitlint-plugin-i18n": "^0.0.1-alpha.3",
-    "cz-customizable": "^7.0.0",
+    "cz-customizable": "^7.2.1",
     "cz-customizable-i18n-config": "^0.0.1-alpha.2",
-    "pretty-error": "^4.0.0",
-    "chalk": "^4.1.2",
-    "husky": "^8.0.3",
-    "@types/chalk": "^2.2.0",
-    "@jest/types": "^29.6.3",
-    "@types/jest": "^29.5.11",
-    "@types/node": "latest",
-    "@types/react": "18.2.48",
+    "eslint": "^9.7.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.1",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "jest-runner-tsd": "^6.0.0",
-    "prettier": "^3.1.1",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "ts-patch": "^3.1.1",
-    "lint-staged": "^15.2.0",
-    "typescript-transform-paths": "^3.4.6",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.3",
+    "pretty-error": "^4.0.0",
+    "rimraf": "^6.0.1",
     "spinnies": "^0.5.1",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1"
-  }
+    "ts-jest": "^29.2.3",
+    "ts-node": "^10.9.2",
+    "ts-patch": "^3.2.1",
+    "tsd-lite": "^0.9.0",
+    "typescript": "^5.5.3",
+    "typescript-transform-paths": "^3.4.7"
+  },
+  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
 }
