--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "paths": {
-      "@/*": ["./src/*"],
+      "@/*": ["./src/*"]
     },
     "resolveJsonModule": true,
     "allowJs": true,
@@ -19,8 +19,8 @@
     "strict": true,
     "skipLibCheck": true,
     "incremental": true,
-    "esModuleInterop": true,
+    "esModuleInterop": true
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts", "**/*.spec.ts"],
-  "exclude": ["node_modules", ".next"],
+  "exclude": ["node_modules", ".next"]
 }
