--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ci:coverage": "pnpm test",
     "postinstall": "node --experimental-modules ./scripts/postinstall.mjs",
     "preinstall": "node --experimental-modules ./scripts/preinstall.mjs",
+    "secret": "node ./scripts/secret.mjs",
     "clear": "rimraf --glob ./libs",
     "format": "prettier --config .prettierrc.js --write \"**/*.{js,jsx,ts,tsx,d.ts,vue,md,json,yml,yaml}\"",
     "lint": "pnpm lint:ts",
@@ -20,12 +21,12 @@
     "ok": "pnpm format && pnpm lint && pnpm build && pnpm test"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "next": "canary",
     "react": "canary",
     "react-dom": "canary"
   },
   "devDependencies": {
-    "json5": "^2.2.3",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@jest/types": "^29.6.3",
@@ -48,6 +49,7 @@
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "jest-runner-tsd": "^6.0.0",
+    "json5": "^2.2.3",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.3",
     "pretty-error": "^4.0.0",
